--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==20.1.0
 Pillow==9.1.0
 psycopg2-binary==2.9.9
 Pyrebase4==4.5.0
+python-dotenv==1.0.0
 pyscopg2==66.0.2
 virtualenv==20.16.7
 virtualenvwrapper-win==1.2.7
